--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,6 +7,9 @@ ru:
         forgot_password: 'Забыли пароль?'
         didnt_receive_confirmation_instructions: 'Не получили письма с подтверждением регистрации?'
         didnt_receive_unlock_instructions: 'Не получили письма с инструкцией по разблокировке?'
+    registrations:
+      new:
+        submit: 'Зарегистрироваться'
   common:
     messages:
       railway_station_has_no_route_yet: 'Станция не входит ни в один маршрут'
