devise registration new localized

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -38,6 +38,14 @@ ru:
       updated: "Ваш пароль изменён. Теперь вы вошли в систему."
       updated_not_active: "Пароль изменён."
     registrations:
+      new:
+        title: 'Регистрация нового пользователя'
+        placeholder:
+          name: 'Имя'
+          last_name: 'Фамилия'
+          email: 'Email'
+          password: 'Пароль. Не менее 6 символов'
+          password_confirmation: 'Подтверждение пароля'
       destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы зарегистрировались."
       signed_up_but_inactive: "Вы зарегистрировались. Тем не менее, вы не можете войти, потому что ваша учетная запись ещё не активирована."
