--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -46,6 +46,14 @@ ru:
           email: 'Email'
           password: 'Пароль. Не менее 6 символов'
           password_confirmation: 'Подтверждение пароля'
+      edit:
+        title: 'Изменение регистрационных данных'
+        placeholder:
+          email: 'Email'
+          password: 'Новый пароль. Не менее 6 символов. Оставьте это поле пустым, если не хотите менять Ваш текущий пароль'
+          password_confirmation: 'Подтверждение нового пароля'
+          current_password: 'Ваш текущий пароль. Он нужен, чтобы подтвердить внесенные изменения'
+        notification: "Вы можете удалить Ваш аккаунт. ВНИМАНИЕ! Это действие необратимо."
       destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы зарегистрировались."
       signed_up_but_inactive: "Вы зарегистрировались. Тем не менее, вы не можете войти, потому что ваша учетная запись ещё не активирована."
